disable java7 profile and obsolete build options in maven